--- a/ModernDeckMini/sources/dev.css
+++ b/ModernDeckMini/sources/dev.css
@@ -1,1 +1,6 @@
-html,body{background:#263238}.spinner-centered{display:none}
+html,body{
+	background:#263238
+}
+.spinner-centered{
+	display:none
+}
